# site

./: Cargo.toml  Dioxus.toml  Justfile  index.html
assets/: manifest.json
src/: blog.rs  home.rs  main.rs
